syntax = "proto3";

option go_package = "auth-service/pb";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string username = 3;
}

message RegisterResponse {
    string accessToken = 1;
    string refreshToken = 2;
}
